--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,7 @@ include 'core:swift3.1.1Action'
 
 include 'core:swift41Action'
 
-include 'core:swift421ActionLoop'
+include 'core:swift42Action'
 
 rootProject.name = 'runtime-swift'
 
