--- a/core/swift42Action/Dockerfile
+++ b/core/swift42Action/Dockerfile
@@ -34,8 +34,15 @@ WORKDIR /swiftAction
 COPY --from=builder /bin/proxy /bin/proxy
 ADD swiftbuild.py /bin/compile
 ADD swiftbuild.py.launcher.swift /bin/compile.launcher.swift
-COPY _Whisk.swift /swiftAction/
+COPY _Whisk.swift /swiftAction/Sources/
 COPY Package.swift /swiftAction/
+COPY buildandrecord.py /swiftAction/
+COPY main.swift /swiftAction/Sources/
+RUN swift build -c release; \
+touch /swiftAction/Sources/main.swift; \
+rm /swiftAction/.build/release/Action; \
+/swiftAction/buildandrecord.py
+
 
 ENV OW_COMPILER=/bin/compile
 ENTRYPOINT [ "/bin/proxy" ]
